--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -71,8 +71,8 @@ nav .nav-section a{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 350px;
-    padding: 0 var(--padding-standar) 0 var(--padding-standar);
+    height: auto;
+    padding: var(--padding-standar);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 350px));
     justify-content: space-around;
@@ -87,13 +87,16 @@ nav .nav-section a{
 .banner .banner-info h1{
     text-align: center;
     align-self: center;
-    
     font-size: 5rem;
 }
 .banner .banner-info p{
     text-align: center;
     margin-bottom: 16px;
     font-size: var(--mobile-fontsize);
+}
+.banner-button--container{
+    display: flex;
+    flex-direction: column;
 }
 button{
     width: 200px;
@@ -102,7 +105,7 @@ button{
     margin-bottom: 16px;
     border-radius: 12px;
     background: none;
-    border:solid 1px var(--text-white);
+    border:solid 2px var(--text-white);
     color: var(--text-white);
 }
 /* sobre mi ---------------------------------------------------------------------------------------------*/
@@ -116,7 +119,7 @@ button{
 }
 .miInfo h2{
     padding-bottom: 10px;
-    color: var(--orange);
+    color: var(--text-white);
     text-align: center;
 }
 .sobreMi .miImg{
@@ -134,6 +137,7 @@ button{
     width: minmax(150px, 300px);
 }
 .certificados h2{
+    margin-bottom: var(--padding-standar);
     text-align: center;
 }
 .certificados-container{
@@ -147,6 +151,7 @@ button{
     width: auto;
     background-color: var(--clean-gray);
     margin: 10px;
+    border-radius: 12px;
 }
 .tarjeta-certificados h4{
     color: var(--text-white);
@@ -168,7 +173,7 @@ button{
 }
 .boton-certificados{
     margin-top: var(--padding-standar);
-    border:solid 1px var(--orange);
+    border:solid 2px var(--orange);
     color: var(--orange);
     position: relative;
 }
@@ -190,7 +195,7 @@ button{
     grid-template-columns: repeat(auto-fit, minmax(150px, 300px));
     justify-items: center;
     /* min-height: 100vh; */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
     
@@ -286,7 +291,7 @@ button{
     margin: 16px;
     border-radius: 12px;
     background: none;
-    border:solid 1px var(--orange);
+    border:solid 2px var(--orange);
     color: var(--orange);
 }
 .contacto-box .tel1{
